# sdl2_engine

./: .gitignore  CMakeLists.txt  README.md  clean.bash  cmake.bash  debug.bash  error.txt  errors.txt  install.bash  install_dependencies.bash  install_sdl.bash  make.bash  run.bash  run.bash~  sdl2_engine.sublime-project  sdl2_engine.sublime-workspace
cmake/: FindCPPCONFIG.cmake  FindGL.cmake
install/: install_dependencies.bash  install_sdl_image.bash  install_sdl_mixer.bash  install_sdl_ttf.bash
resources/entity/: cubey_1.yaml  cubey_2.yaml  cubey_3.yaml
resources/loader/: unit_0.yaml
resources/yaml/: config.yaml  entity_cubey.yaml
source/: CMakeLists.sublime-workspace  CMakeLists.txt  CMakeLists.txt~  application.h  sdl2_engine.cpp  sdl2_engine.cpp~
source/camera/: camera.cpp  camera.h  manager.cpp  manager.h
source/camera/source_listing/: listing_0000.cpp
source/command_line/: auto_close_timer.cpp  auto_close_timer.h  base.cpp  base.h  cmd_line.cpp  cmd_line.h  i_entry.h  screen_dimensions.cpp  screen_dimensions.h
source/command_line/source_listing/: listing_0000.cpp
source/component/: base.cpp  base.h  component_list.h  location.cpp  location.h  manager.cpp  manager.h  render.cpp  render.h
source/component/source_listing/: listing_0000.cpp
source/entity/: base.cpp  base.h  entity.cpp  entity.h  entity_id.h  list.cpp  list.h  types.hxx
source/entity/source_listing/: listing_0000.cpp
source/factory/: factory.cpp  factory.h  register.cpp  register.h  setup.h  types.hxx
source/factory/source_listing/: listing_0000.cpp
source/game/: application.cpp  application.h  hopper.cpp  hopper.h  renderer.cpp  renderer.h
source/game/source_listing/: listing_0000.cpp
source/gl_helpers/: primitives.cpp  primitives.h
source/gl_helpers/source_listing/: listing_0000.cpp
source/ladder/: ladder.cpp  ladder.h  rung_base.cpp  rung_base.h
source/ladder/source_listing/: listing_0000.cpp
source/log/: log.cpp  log.h
source/log/source_listing/: listing_0000.cpp
source/passport/: base.cpp  base.h  identity_factory.h  passport.cpp  passport.h  passport.hxx
source/passport/source_listing/: listing_0000.cpp
source/render/: item.cpp  item.h  manager.cpp  manager.h  types.hxx
source/render/source_listing/: listing_0000.cpp
source/shaders/fragment/: basic.glfs  frag_0.glfs
source/shaders/vertex/: vert_0.glvs
source/types/: glm.hxx  int.hxx  stl.hxx
source/yaml_helpers/: doc.cpp  doc.h  stream.cpp  stream.h
source/yaml_helpers/source_listing/: listing_0000.cpp
